istio/kubernetes-styra-das/example-app-template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example-app
  namespace: istio-opa-demo
  labels:
    app: example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
        - name: app
          image: pvsone/demo-restful-api:0.3
          ports:
            - containerPort: 5000
        - name: opa
          image: openpolicyagent/opa:0.27.1-envoy-1
          volumeMounts:
          - readOnly: true
            mountPath: /config
            name: opa-config-vol
          args:
          - "run"
          - "--server"
          - "--ignore=.*"
          - "--config-file=/config/conf.yaml"
      volumes:
      - name: opa-config-vol
        configMap:
          name: opa-envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  namespace: istio-opa-demo
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: example-app
  type: NodePort
